# em2024-api

./: .env.dist  .gitignore  Cargo.toml  README.md  ecosystem.config.json
.github/workflows/: main.yml
src/: lib.rs  main.rs  routes.rs
src/db/: fixtures.rs  mod.rs
src/service/: daily_winner.rs  mod.rs  ranking.rs
tests/: integration_test.rs  integration_tests.rs  routes_test.rs
tests/common/: mod.rs
