[package]
name = "em2021-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite  = "0.31.0"
dotenv = "0.15"
chrono = "0.4.38"
serde_derive = "1.0.203"
mockall = "0.12.1"

[dev-dependencies]
rstest = "0.21"
